created product scaffold and empty soft_delete

--- a/BookShop/app/views/products/_form.html.erb
+++ b/BookShop/app/views/products/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Name %>
-    <%= form.text_field :Name %>
+    <%= form.label :Title %>
+    <%= form.text_field :Title %>
   </div>
 
   <div class="field">
-    <%= form.label :Description %>
-    <%= form.text_area :Description , rows: 8 , cols: 60 %>
+    <%= form.label :description %>
+    <%= form.text_area :description , rows:8, cols: 60%>
   </div>
 
   <div class="field">
