--- a/BookShop/app/views/products/show.html.erb
+++ b/BookShop/app/views/products/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @product.Name %>
+  <strong>Title:</strong>
+  <%= @product.Title %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @product.Description %>
+  <%= @product.description %>
 </p>
 
 <p>
