--- a/BookShop/app/views/products/index.html.erb
+++ b/BookShop/app/views/products/index.html.erb
@@ -5,7 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th><%= check_box_tag "products[]" %></th>
+      <th>Title</th>
       <th>Description</th>
       <th>Price</th>
       <th>Image url</th>
@@ -16,16 +17,15 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-
-        <td><%= product.Name %></td>
-        <td><%= product.Description %></td>
+        <td><%= check_box_tag "products[]", product.id %></td>
+        <td><%= product.Title %></td>
+        <td><%= product.description %></td>
         <td><%= product.price %></td>
         <td><%= product.image_url %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'soft destroy', product %></td>
-        <%= check_box_tag "products[]" , product.id %> 
+        <td><%= link_to 'softDelete', "soft-delete/#{product.id}" %></td>
       </tr>
     <% end %>
   </tbody>
