--- a/BookShop/app/views/products/index.html.erb
+++ b/BookShop/app/views/products/index.html.erb
@@ -16,6 +16,11 @@
 
   <tbody>
     <% @products.each do |product| %>
+      <% if product.deleted? %>
+        <tr class="deleted" >
+      <% else %>
+        <tr >
+      <% end %>
       <tr>
        <td> <%= check_box_tag "product_ids[]", product.id, false, :id => "product_#{product.id}" %></td>
         <td><%= product.Title %></td>
@@ -25,6 +30,7 @@
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'SoftDelete', "/soft-delete/#{product.id}" %></td>
       
       </tr>
     <% end %>
