--- a/BookShop/app/views/products/index.html.erb
+++ b/BookShop/app/views/products/index.html.erb
@@ -2,10 +2,15 @@
 
 <h1>Products</h1>
 <%= form_tag products_destroy_path, method: :post do %>
+<div class="button">
+    <%= submit_tag "Delete", class: 'btn' %>
+</div>
+<br>
+<br>
 <table>
   <thead>
     <tr>
-      <th><%= check_box_tag "products[]" %></th>
+      <th id="chck"><%= check_box_tag 'select_all' %></th>
       <th>Title</th>
       <th>Description</th>
       <th>Price</th>
@@ -22,14 +27,14 @@
         <tr >
       <% end %>
       
-       <td> <%= check_box_tag "product_ids[]", product.id, false, :id => "product_#{product.id}" %></td>
+        <td id="mycheck"> <%= check_box_tag "product_ids[]", product.id, checked=false, class: "mychck" %></td>
         <td><%= product.Title %></td>
         <td><%= product.description %></td>
         <td><%= product.price %></td>
-        <td><%= product.image_url %></td>
+        <td class="image"><%= link_to image_tag(product.image_url) %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <!--    <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
         <td><%= link_to 'SoftDelete', "/soft-delete/#{product.id}" %></td>
         <td><%= link_to 'Undelete', "/un-delete/#{product.id}" %></td>
       
@@ -38,8 +43,7 @@
   </tbody>
 </table>
 
-<br>
-<%= submit_tag "Delete selected" %>
+
 <br>
 <%= link_to 'New Product', new_product_path %>
 <% end %>
