added will_paginate for pagination

--- a/BookShop/app/assets/stylesheets/products.scss
+++ b/BookShop/app/assets/stylesheets/products.scss
@@ -20,11 +20,6 @@ image{
 	position: absolute;
 	right: 35%;
 	top: 5%;
-	background-color: red;
+	background-color: grey;
 }
 
-.btn:hover{
-	font-size: 2em;
-	color: white;
-	background-color: #8B0000;
-}
