created create ,edit , update ,destroy action

--- a/store/app/views/products/show.html.erb
+++ b/store/app/views/products/show.html.erb
@@ -1,2 +1,28 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>title:</strong>
+  <%= @product.Title %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @product.description %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @product.price %>
+</p>
+
+<p>
+  <strong>Image url:</strong>
+  <%= @product.image_url %>
+</p>
+
+<p>
+  <strong>color:</strong>
+  <%= @product.color %>
+</p>
+
+<%= link_to 'Back', products_path %>
