--- a/store/app/views/products/index.html.erb
+++ b/store/app/views/products/index.html.erb
@@ -1,2 +1,43 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+<%= form_tag do %>
+
+<h1>Products</h1>
+
+<table>
+  <thead>
+    <tr>
+    
+      <th>title</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Image url</th>
+      
+    
+
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @products.each do |product| %>
+      <tr >
+       
+        <td><%= product.title %></td>
+        <td><%= product.description %></td>
+        <td class="price"><%= product.price %></td>
+        <td class="image"><%= link_to (product.image_url)%></td>
+     
+
+       
+
+        <td><%= link_to 'Edit', edit_product_path(product) %></td>
+        <td><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></td> 
+      
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<%= link_to 'New Product', new_product_path %>
+
+<% end %>
