created form with form_tag

--- a/store/app/views/products/show.html.erb
+++ b/store/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>title:</strong>
-  <%= @product.Title %>
+  <%= @product.title %>
 </p>
 
 <p>
@@ -20,9 +20,5 @@
   <%= @product.image_url %>
 </p>
 
-<p>
-  <strong>color:</strong>
-  <%= @product.color %>
-</p>
 
 <%= link_to 'Back', products_path %>
