--- a/store/app/views/products/new.html.erb
+++ b/store/app/views/products/new.html.erb
@@ -1,36 +1,5 @@
- <%= form_with(model: @product) do |form| %>
- 
 
-  <div class="field">
-    <%= form.label :Title %>
-    <%= form.text_field :Title %>
-  </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description , rows:8, cols: 60%>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
-  </div>
-
-  <div class="field">
-    <%= form.label :color %>
-    <%= form.text_field :color %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
-
- <%#= render 'form' %>
+ <%= render 'form' %>
 
  <%#= link_to 'back', products_path %>
