--- a/store/app/views/products/_form2.html.erb
+++ b/store/app/views/products/_form2.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @product) do |form| %>
+<%= form_with url: '/products', scope: 'product' do |form| %>
  
 
   <div class="field">
