removed callback action and helper respond_to

--- a/store/app/views/products/_form3.html.erb
+++ b/store/app/views/products/_form3.html.erb
@@ -2,8 +2,8 @@
  
 
   <div class="field">
-    <%= label_tag "Name" %>
-    <%= text_field_tag "product[name]" %>
+    <%= label_tag "Title" %>
+    <%= text_field_tag "product[title]" %>
   </div>
   <br>
 
