--- a/store/app/views/products/index.html.erb
+++ b/store/app/views/products/index.html.erb
@@ -1,7 +1,13 @@
 <p id="notice"><%= notice %></p>
-<%= form_tag do %>
+
+<%= form_tag products_path, :method => 'get' do %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag "search" %>
+</end>
 
 <h1>Products</h1>
+
+
 
 <table>
   <thead>
