added Date_of_birth column in user/registration/new.html

--- a/omega/app/views/devise/registrations/new.html.erb
+++ b/omega/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,12 @@
     <%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true %>
   </div>
+
+  <div class="field">
+    <%= f.label :Date_of_birth %><br />
+    <%= f.date_field :Date_of_birth %>
+  </div>
+
   
   <div class="field">
     <%= f.label :location %><br />
