--- a/Test/app/views/products/index.html.erb
+++ b/Test/app/views/products/index.html.erb
@@ -17,7 +17,10 @@
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.price %></td>
-        <td><%= product.make %></td>        
+        <td><%= product.make %></td>   
+        <td><%= link_to 'Show', product %>
+        <td><%= link_to 'Edit', edit_product_path(product)%></td>
+             
       </tr>
     <% end %>
   </tbody>
