--- a/DeviseJWT/app/views/home/index.html.erb
+++ b/DeviseJWT/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Home Page</h1>
 <br>
-<% if user_signed_in? %>
-  <h2> <strong><%= @user.email %>'s Posts</strong> </h2>
+<% if user_signed_in? %>	
+  <h2> <strong><%= @user.email %></strong> </h2>
   
 <br><br>
 <%= link_to 'Edit', edit_user_registration_path %><br><br>
