shown user account_no in index page

--- a/DeviseJWT/app/views/home/index.html.erb
+++ b/DeviseJWT/app/views/home/index.html.erb
@@ -25,6 +25,20 @@
   <% end %>
   <br><br><br>
 
+  <table>
+    <thead>
+      <th>Name</th>
+      <th>account_no</th>
+    </thead>
+    
+    <tbody>
+      <tr>
+        <td><%= @user.name %></td>
+        <td><%= @user.account.account_no %></td
+      </tr>
+    </tbody>
+  </table>        
+
   <h4> Your details
   <table>
     <thead>
